# vegas_params

./: README.md  base.py  pyproject.toml  vector.py
.github/workflows/: python-package.yml  test.yml
src/: __init__.py  base.py  collections.py  integration.py  utils.py
test/: test_integrals.py
vegas_params/: __init__.py  base.py  integration.py  utils.py  vector.py
