[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vegas_params"
version = "0.0.1"
authors = [
  { name="Andrey Sheshukov", email="ash@jinr.ru" },
]
description = "A wrapper for the Vegas integrator"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["numpy>=1.20", "vegas>=5.6"]

[project.optional-dependencies]
test = ["pytest>=8"]

[project.urls]
Homepage = "https://github.com/Sheshuk/vegas_param"
Issues = "https://github.com/Sheshuk/vegas_param/issues"

